# mtg_sims

./: CMakeLists.txt  LICENSE  README.md
sims/: CMakeLists.txt
sims/src/: burn_fetch.cpp  combustible_gearhulk.cpp  draw_singleton.cpp  lupine_prototype.cpp  manabase_mulligan.cpp
sims_lib/: CMakeLists.txt
sims_lib/include/mtg_sims/: card.h  deck.h  game.h  mtg_sims.h  sim.h  timer.h  zone.h
sims_lib/src/: card.cpp  deck.cpp  game.cpp  sim.cpp  timer.cpp  zone.cpp
